# cpp-project-generator

./: .clang-format  .gitignore  README.md  build.sh  install.sh  make-tests.sh  new.py
old/sdl-gl/: conanfile.txt  config.json
old/sdlgl/: CMakeLists.txt  config.json
old/sdlgl/Data/Shaders/: MinFragment.glsl
old/sdlgl/src/: Maths.h
old/sdlgl/src/Graphics/: Shader.c  Shader.h
opengl-fps/testproj/: CMakeLists.txt
opengl-fps/testproj/scripts/: debug.sh  run.sh
opengl-fps/testproj/shaders/: static.fragment
opengl-fps/testproj/src/: CMakeLists.txt
src/: main.cpp  main.py
templates/: debug.sh  deploy.sh
templates/_common/: .gitignore  build.sh  debug.sh  run.sh
templates/opengl/: CMakeLists.txt  README.md  config.json
templates/opengl-fps/: CMakeLists.txt  README.md
templates/opengl-fps/src/: main.cpp
templates/opengl-fps/src/input/: keyboard.cpp
templates/opengl/Data/Shaders/: GUIVertex.glsl  ScreenFragment.glsl  ScreenVertex.glsl
templates/opengl/Data/shaders/: min_vertex.glsl
templates/opengl/data/Shaders/: SceneVertex.glsl
templates/opengl/data/shaders/: min_fragment.glsl
templates/opengl/scripts/: debug.sh  deploy.sh  run.sh
templates/opengl/shaders/: static_fragment.glsl  static_vertex.glsl
templates/opengl/src/: GUI.cpp  Game.h  Keyboard.cpp  Maths.cpp  Maths.h  Util.cpp  Util.h  Utility.cpp  application.cpp  application.h  main.cpp  maths.cpp  maths.h
templates/opengl/src/GL/: Framebuffer.cpp  GLDebug.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
templates/opengl/src/Graphics/: Mesh.cpp  Shader.cpp  Shader.h  Texture.cpp
templates/opengl/src/gl/: gl_errors.cpp  gl_errors.h  primitive.h  shader.cpp  shader.h  textures.cpp  textures.h  vertex_array.cpp  vertex_array.h
templates/opengl/src/input/: keyboard.cpp  keyboard.h
templates/sdlgl/: CMakeLists.txt  README.md
templates/sdlgl/Data/Shaders/: MinVertex.glsl
templates/sdlgl/src/: Maths.c  main.c  oldmain.c
templates/sdlgl/src/Graphics/: GLDebug.c  GLDebug.h
templates/sflua/: CMakeLists.txt  README.md  config.json
templates/sfml/: CMakeLists.txt  README.md  config.json
templates/sfml-gl/: CMakeLists.txt  README.md  conanfile.txt  config.json
templates/sfml-gl/data/Shaders/: GUIFragment.glsl  SceneFragment.glsl
templates/sfml-gl/src/: GUI.cpp  GUI.h  Game.cpp  Game.h  Utility.cpp  Utility.h  main.cpp
templates/sfml-gl/src/Graphics/: Framebuffer.cpp  Framebuffer.h  GLWrappers.h  Mesh.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
templates/sfml-gl/src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sfml.cpp  imgui_impl_sfml.h  imgui_wrapper.h
templates/sfml-lite/: .gitignore
templates/sfml-lite/src/: main.cpp
templates/sfml/src/: application.cpp  application.h  main.cpp
templates/sfml2/: config.json
templates/sfml_starter/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.json  notes.txt
templates/sfml_starter/src/: Profiler.h  Screen.cpp  Screen.h  ScreenGame.cpp  main.cpp
templates/sfml_starter/src/Game/: ScreenGame.cpp  ScreenGame.h  ScreenMainMenu.cpp
templates/sfml_starter/src/imgui_sfml/: LICENSE  imgui-SFML.cpp
templates/term/: CMakeLists.txt  README.md  config.json
templates/terminal/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
templates/terminal/src/: main.cpp
